# LLM_coding_practical_example_JRC_LEGENT_presentation_15_05_26

./: .gitignore  AGENTS.md  README.md  RUNBOOK.md  pyproject.toml
data/: opsd_de_load.csv
prompts/: L1.md  L2.md  L3.md
runs/L1/: forecast.csv  forecast.py  metrics.csv
runs/L2/: AGENTS.md  forecast.csv  forecast.py  metrics.csv
runs/L3/: AGENTS.md  forecasts_test_window.csv  metrics.csv  metrics.json  transcript.md
runs/L3/code/: common.py  forecast.py  lightgbm_features.py  naive.py  nbeats.py  patchtst.py  prophet.py  sarima.py
scripts/: build_slide_figures.py  fetch_data.py  verify_slide_numbers.py
slides/: jrc_section.md  jrc_section.pptx  jrc_section_beamer.tex  jrc_section_v2_beamer.tex  speaker_companion.tex  talk.md  talk_beamer.tex  talk_v2.md
typst_version/: README.md  jrc-theme.typ  jrc_section_v2.typ  talk_v2.typ
